--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
 
 
-  <title>ToDo App Redux</title>
+  <title>Capa de datos e-commerce</title>
 </head>
 
 <body>
